Change log next version
-----------------------
* Fixed an issue when mocking system classes containing fields of type Class, Classloader or synthetic fields such as java.util.ServiceLoader.
* TestNG PowerMockObjectFactory now sets the thread context classloader to the PowerMock mock classloader (issue 315).
* Upgraded TestNG module to TestNG 6.0.1 (issue 316).

Change log 1.4.8 (2011-02-26)
-----------------------------
* Fixed a bug in Whitebox which prevented passing null parameters to methods.
* PowerMock now supports mocking static final inner classes and member Enums (issue 95). 
* Fixed a bug in PowerMockito that sometimes caused the finalize method to be called instead of the expecting method when setting up expectations (issue 308).
* Upgraded TestNG module to TestNG 5.14.6

Change log 1.4.7 (2010-12-27)
-----------------------------
* The MemberModifier API now checks that the replacing method returns the same type and have the same number of parameters as the original method otherwise an IllegalArgumentException is thrown (issue 285).
* Fixed a bug which made it impossible to mock private methods with multiple arguments (issue 289).
* Removed some unwanted debug messages from the TestNG module.
* Updated javadoc in Whitebox and WhiteboxImpl.
* EasyMock and Mockito extension API now supports mocking new invocations with var args parameters when var args paramters is not the first parameter (issue 163).
* Various improvements to var args handling for both methods and constructors.
* Upgraded to Javassist 3.14 (issue 295).
* Upgraded junit module to use JUnit 4.8.2 (issue 296).
* You no longer need to prepare system classes that are not final and whose methods are not static, final or native in a special way (by prepare the class calling the system class method) (issue 300).
* Added method "defaultConstructorIn" to the MemberMatcher API so that you can e.g. suppress a default constructor using suppress(defaultConstructorIn(SomeClass.class)) (issue 302).